--- a/webpage.html
+++ b/webpage.html
@@ -4,7 +4,7 @@
     <title> my first web page </title>
   </head>
   <body>
-    <h1> DIGITAL MARKETING </h1>
-    <marquee> my name is Devi</marquee>
+    <h1> python </h1>
+    <marquee> my name is Devi </marquee>
   </body>
 </html>
